Added figures and changed layout

--- a/main.tex
+++ b/main.tex
@@ -87,9 +87,7 @@
 	\end{alertblock}
 	
 	\begin{block}{Cases and Simulation Setup}
-		Data from the ASCOS field campaign and from the DOE ARM site at Oliktok Point, Alaska, analysed to find cases of potential aerosol-limited cloud dissipation.
-
-		Two potential cases have been identified:
+		Two potential cases have been identified where cloud dissipation occurred coincidentally with a surface aerosol concentration decrease:
 		\begin{itemize}
 			\item Oliktok Point - May 12th, 2017
 			\begin{itemize}
@@ -100,15 +98,26 @@
 				\item Arctic ocean ice floe
 			\end{itemize}
 		\end{itemize}
+		
+		The plots below show radar reflectivity (a) and aerosol concentration (b).
+		\begin{figure}
+			\includegraphics[width=0.9\linewidth]{images/oli_timeseries.png}
+			\includegraphics[width=0.9\linewidth]{images/ascos_timeseries.png}
 
-The plots below show radar reflectivity (a) and aerosol concentration (b).
+		\end{figure}
 	\end{block}
 \end{column} % End of the first column
 
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
 \begin{column}{\twocolwid}
-
+\begin{block}{Simulation Results}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.45\linewidth]{images/oli_lwp.png}
+		\includegraphics[width=0.45\linewidth]{images/ascos_lwp.png}
+	\end{figure}
+\end{block}
 \end{column}
 
 
