--- a/beamerthemeconfposter.sty
+++ b/beamerthemeconfposter.sty
@@ -195,8 +195,8 @@
     	{\includegraphics[width=0.20  \linewidth]{./images/ucdatmlogo.pdf}};
       \node[anchor=north east, inner sep=1cm] at (current page.north east)
     	{A51L-2855};
-      \node[anchor=north west, inner sep=5.5cm] at (current page.north west)
-    	{\includegraphics[width=0.07\linewidth]{./images/informal-seal-2col.png}};
+      \node[anchor=north west, inner sep=6cm] at (current page.north west)
+    	{\includegraphics[width=0.07\linewidth]{./images/doe_logo.png}};
     \end{tikzpicture}
 	% \usebeamercolor{institute in headline}{\color{fg}\large{Corresponding Author: lsterzinger@ucdavis.edu}}
     \vskip1cm
