--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,15 @@
 \usepackage{natbib}
 
 \usepackage[export]{adjustbox}
- 	
+
+% \newenvironment{myitemize}{%
+%    \setlength{\topsep}{0pt}
+%    \setlength{\partopsep}{0pt}
+%    \renewcommand*{\@listi}{\leftmargin\leftmargini \parsep\z@ \topsep\z@ \itemsep\z@}
+%    \let\@listI\@listi
+%    \itemize
+% }{\enditemize}
+
 \setbeamerfont{caption}{size=\small}
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION 
@@ -86,46 +94,95 @@
         \end{itemize}
 	\end{alertblock}
 	
-	\begin{block}{Cases and Simulation Setup}
-		Two potential cases have been identified where cloud dissipation occurred coincidentally with a surface aerosol concentration decrease:
+	\begin{block}{Simulation Setup}
+		Regional Atmospheric Modeling System (RAMS) in LES mode
 		\begin{itemize}
-			\item Oliktok Point - May 12th, 2017
-			\begin{itemize}
-				\item Northern slope of Alaska - ocean/land boundary
-			\end{itemize}
-			\item ASCOS - August 31st, 2008
-			\begin{itemize}
-				\item Arctic ocean ice floe
-			\end{itemize}
+			\item Harrington 2-stream radiation
+			\item RAMS 2M bulk microphysics
+			\item Prescribed aerosol concentration
 		\end{itemize}
-		
-		The plots below show radar reflectivity (a) and aerosol concentration (b).
-		\begin{figure}
-			\includegraphics[width=0.9\linewidth]{images/oli_timeseries.png}
-			\includegraphics[width=0.9\linewidth]{images/ascos_timeseries.png}
-
-		\end{figure}
+		% \begin{tabular}{c|c}
+		% 	dx,dy & 6.25 m \\ \hline
+		% 	dz & 6.25 m \\ \hline
+		% 	dt & 1 s \\ \hline
+		% 	x,y,z & 6 x 6 x 1.25 km 
+		% \end{tabular}
 	\end{block}
+
 \end{column} % End of the first column
 
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
 \begin{column}{\twocolwid}
-\begin{block}{Simulation Results}
-	\begin{figure}
-		\centering
-		\includegraphics[width=0.45\linewidth]{images/oli_lwp.png}
-		\includegraphics[width=0.45\linewidth]{images/ascos_lwp.png}
-	\end{figure}
-\end{block}
+	\begin{block}{Cases}
+		Two potential cases have been identified where cloud dissipation occurred coincidentally with a surface aerosol concentration decrease:
+		\begin{itemize}
+			\item Oliktok Point - May 12th, 2017 - Northern slope of Alaska - ocean/land boundary
+			\item ASCOS - August 31st, 2008 - Arctic ocean ice floe
+		\end{itemize}
+		
+		The plots below show radar reflectivity (a) and aerosol concentration (b).
+		\begin{figure}
+			\includegraphics[width=0.49\linewidth]{images/oli_timeseries.png}
+			\includegraphics[width=0.49\linewidth]{images/ascos_timeseries.png}
+
+		\end{figure}
+	\end{block}
+
+	\begin{alertblock}{Simulation Results}
+		\begin{column}{0.59\linewidth}
+			\begin{figure}
+				\centering
+				\includegraphics[width=\linewidth]{images/oli_lwp.png}
+				\includegraphics[width=\linewidth]{images/ascos_lwp.png}
+			\end{figure}
+		\end{column}
+		\begin{column}{0.5\sepwid}\end{column}
+		\begin{column}{0.39\linewidth}
+			Balloon soundings and observed aerosol concentrations used to initialize LES model
+			\vspace{0.1 em}
+
+			Two simulations per case:
+			\begin{itemize}
+				\item Stable-cloud control
+				\begin{itemize}
+					\item Aerosol concentration held constant throughout, no source/sink
+				\end{itemize}
+				\item Aerosol Forcing Experiment
+				\begin{itemize}
+					\item Same as control, but aerosol forced to $0\ cm^{-3}$ at the time denoted by the red line
+				\end{itemize}
+			\end{itemize}
+			\vspace{0.1em}
+			Compare LWP response to aerosol forcing against observed LWP at time of cloud dissipation.
+
+		\end{column}
+	\end{alertblock}
 \end{column}
 
 
 
 \begin{column}{\sepwid}\end{column}
 
+%%%%%%%%%%%%%%
+% 3rd column %
+%%%%%%%%%%%%%%
 \begin{column}{\onecolwid}
-	
+	\begin{block}{Discussion}
+		The extreme forcing simulations were done to ascertain whether or not aerosol-limited dissipation could be the cause of the observed dissipation cases. Ideally, these extreme aerosol forcings should
+
+		\begin{itemize}
+			\item If the modeled LWP response was slower than the observed, then other effects must be enhancing the dissipation rate
+			\item If modeled LWP response was faster than observed, limited aerosol may be the primary cause of dissipation, but is not possible to say for certain
+		\end{itemize}
+		
+	\end{block}
+	\begin{alertblock}{Main Takeaways}
+		\begin{itemize}
+			\item The Oliktok Point simulated LWP response was much slower than observed, indicating that other factors were likely forcing the cloud disspiation	
+			\item The ASCOS simulated LWP response matched closely with the observed decay, suggesting that the ASCOS case may have dissipated due to lack of aerosol
+		\end{itemize}
+	\end{alertblock}
 \end{column}
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
