Finalized last column

--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,7 @@
 			Balloon soundings and observed aerosol concentrations used to initialize LES model
 			\vspace{0.1 em}
 
-			Two simulations per case:
+			\underline{Two simulations per case:}
 			\begin{itemize}
 				\item Stable-cloud control
 				\begin{itemize}
@@ -183,6 +183,27 @@
 			\item The ASCOS simulated LWP response matched closely with the observed decay, suggesting that the ASCOS case may have dissipated due to lack of aerosol
 		\end{itemize}
 	\end{alertblock}
+	
+	\begin{block}{Conclusions}
+		\begin{itemize}
+			\item It is difficult to isolate the role of aerosol concentration on observed cloud dissipation
+			\item When doing an "extreme" level of aerosol forcing, the ASCOS simulation agreed much closer to observations than Oliktok Point.
+			\begin{itemize}
+				\item ASCOS dissipation may be forced by aerosol concentrations, but impossible to say for sure
+			\end{itemize}
+		\end{itemize}
+		
+		\underline{Future Work}
+		\begin{itemize}
+			\item Simulate various (and more realistic) aerosol treatment methods
+			\item Examine in-cloud processes
+			\item Locate and test more cases
+		\end{itemize}
+		
+		
+		This work was supported by US Department of Energy Atmospheric System Research Grant #DE-SC0019073-01
+	\end{block}
+
 \end{column}
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
