added correct poster number

--- a/beamerthemeconfposter.sty
+++ b/beamerthemeconfposter.sty
@@ -194,7 +194,7 @@
     	\node[anchor=north east, inner sep=7.5cm] at (current page.north east)
     	{\includegraphics[width=0.20  \linewidth]{./images/ucdatmlogo.pdf}};
       \node[anchor=north east, inner sep=1cm] at (current page.north east)
-    	{A51L-2855};
+    	{13AEROSOL-672};
       \node[anchor=north west, inner sep=6cm] at (current page.north west)
     	{\includegraphics[width=0.07\linewidth]{./images/doe_logo.png}};
     \end{tikzpicture}
