--- a/main.tex
+++ b/main.tex
@@ -103,6 +103,7 @@
 			\item dx, dy = 62.5 m
 			\item dz = 6.25 m
 			\item Domain = 6 x 6 x 1.25 km
+			\item Cyclic boundary conditions
 		\end{itemize}
 		% \begin{tabular}{c|c}
 		% 	dx,dy & 6.25 m \\ \hline
