--- a/main.tex
+++ b/main.tex
@@ -93,51 +93,56 @@
 			\end{itemize}
         \end{itemize}
 	\end{alertblock}
-	
-	\begin{block}{Simulation Setup}
-		Regional Atmospheric Modeling System (RAMS) in LES mode
+	\begin{block}{Cases}
+		Two potential cases (Fig. \ref{fig:obs}) have been identified where cloud dissipation occurred coincidentally with a surface aerosol concentration decrease:
 		\begin{itemize}
-			\item Harrington 2-stream radiation
-			\item RAMS 2M bulk microphysics
-			\item Prescribed aerosol concentration
-			\item dx, dy = 62.5 m
-			\item dz = 6.25 m
-			\item Domain = 6 x 6 x 1.25 km
-			\item Cyclic boundary conditions
+			\item Oliktok Point - May 12th, 2017 - Northern slope of Alaska - ocean/land boundary
+			\item ASCOS - August 31st, 2008 - Arctic ocean ice floe
 		\end{itemize}
-		% \begin{tabular}{c|c}
-		% 	dx,dy & 6.25 m \\ \hline
-		% 	dz & 6.25 m \\ \hline
-		% 	dt & 1 s \\ \hline
-		% 	x,y,z & 6 x 6 x 1.25 km 
-		% \end{tabular}
-		\section{Initial Profiles}
-		\begin{figure}
-			\centering
-			\includegraphics[width=\linewidth]{images/bl_profile.png}
-			\caption{Boundary layer $\theta$ profiles used to initialize LES simulations}
-		\end{figure}
-	\end{block}
+		
+\end{block}
+\begin{block}{Model Description}
+	Regional Atmospheric Modeling System (RAMS) in LES mode. 
+
+	\begin{itemize}
+		\item Harrington 2-stream radiation
+		\item RAMS 2M bulk microphysics
+		\item dx, dy = 62.5 m
+		\item dz = 6.25 m
+		\item Domain = 6 x 6 x 1.25 km
+		\item Cyclic boundary conditions
+	\end{itemize}
+\end{block}
+
+
 
 \end{column} % End of the first column
 
 \begin{column}{\sepwid}\end{column} % Empty spacer column
 
 \begin{column}{\twocolwid}
-	\begin{block}{Cases}
-			Two potential cases have been identified where cloud dissipation occurred coincidentally with a surface aerosol concentration decrease:
-			\begin{itemize}
-				\item Oliktok Point - May 12th, 2017 - Northern slope of Alaska - ocean/land boundary
-				\item ASCOS - August 31st, 2008 - Arctic ocean ice floe
-			\end{itemize}
-			
+	% \begin{column}{0.5\linewidth}
+		\begin{block}{Case Observations}
 			\begin{figure}
 				\centering
 				\includegraphics[width=0.49\linewidth]{images/oli_timeseries.png}
 				\includegraphics[width=0.49\linewidth]{images/ascos_timeseries.png}
-				\caption{Observed Ka-band radar reflectivity (top) and CPC aerosol concentration (bottom) for Oliktok Point and ASCOS}
+				\caption{Observed Ka-band radar reflectivity (top) and CPC aerosol concentration (bottom) for Oliktok Point and ASCOS}\label{fig:obs}
 			\end{figure}	
-	\end{block}
+		\end{block}
+
+	% \end{column}
+	% \begin{column}{0.5\linewidth}
+	% 	\begin{block}{Initial Profiles}
+	% 		\begin{figure}
+	% 			\centering
+	% 			\includegraphics[width=0.9\linewidth]{images/bl_profile.png}
+	% 			\caption{Boundary layer $\theta$ profiles used to initialize LES simulations}\label{fig:theta}
+	% 		\end{figure}
+	% 	\end{block}
+	% \end{column}
+
+
 
 	\begin{alertblock}{Simulation Results}
 		\begin{column}{0.59\linewidth}
@@ -145,14 +150,14 @@
 				\centering
 				\includegraphics[width=\linewidth]{images/oli_lwp.png}
 				\includegraphics[width=\linewidth]{images/ascos_lwp.png}
-				\caption{Observed and simulated liquid water path (LWP) for Oliktok Point (top) and ASCOS (bottom).}
+				\caption{Observed and simulated liquid water path (LWP) for Oliktok Point (top) and ASCOS (bottom).}\label{fig:simulations}
 			\end{figure}
 		\end{column}
 		\begin{column}{0.5\sepwid}\end{column}
 		\begin{column}{0.39\linewidth}
-			Balloon soundings and observed aerosol concentrations used to initialize LES model
-			\vspace{0.1 em}
-
+			Balloon soundings (Fig. \ref{fig:theta}) and observed aerosol concentrations used to initialize LES model
+			\vspace{1 em}
+			
 			\underline{Two simulations per case:}
 			\begin{itemize}
 				\item Stable-cloud control
@@ -164,7 +169,8 @@
 					\item Same as control, but aerosol forced to $0\ cm^{-3}$ at the time denoted by the red line
 				\end{itemize}
 			\end{itemize}
-			\vspace{0.1em}
+			\vspace{1 em}
+
 			Compare LWP response to aerosol forcing against observed LWP at time of cloud dissipation.
 			\begin{itemize}
 				\item Oliktok Point simulated LWP response was much slower than observed
@@ -183,7 +189,7 @@
 %%%%%%%%%%%%%%
 \begin{column}{\onecolwid}
 	\begin{block}{Discussion}
-		The extreme forcing simulations were done to ascertain whether or not aerosol-limited dissipation could be the cause of the observed dissipation cases. Ideally, these extreme aerosol forcings should
+		The extreme forcing simulations were done to ascertain whether or not aerosol-limited dissipation could be the cause of the observed dissipation cases. These extreme forcing simulations should represent the fastest possible dissipation under a ``tenuous'' regime.
 
 		\begin{itemize}
 			\item If the modeled LWP response was slower than the observed, then other effects must be enhancing the dissipation rate
