Added BL profiles

--- a/main.tex
+++ b/main.tex
@@ -149,6 +149,9 @@
 			\begin{figure}
 				\centering
 				\includegraphics[width=\linewidth]{images/oli_lwp.png}
+
+				\vspace{2em}
+
 				\includegraphics[width=\linewidth]{images/ascos_lwp.png}
 				\caption{Observed and simulated liquid water path (LWP) for Oliktok Point (top) and ASCOS (bottom).}\label{fig:simulations}
 			\end{figure}
@@ -156,7 +159,12 @@
 		\begin{column}{0.5\sepwid}\end{column}
 		\begin{column}{0.39\linewidth}
 			Balloon soundings (Fig. \ref{fig:theta}) and observed aerosol concentrations used to initialize LES model
-			\vspace{1 em}
+			% \vspace{1 em}
+			\begin{figure}
+				\centering
+				\includegraphics[width=0.8\linewidth]{images/bl_profile.png}
+				\caption{Boundary layer $\theta$ profiles used to initialize LES simulations}\label{fig:theta}
+			\end{figure}
 			
 			\underline{Two simulations per case:}
 			\begin{itemize}
@@ -169,13 +177,14 @@
 					\item Same as control, but aerosol forced to $0\ cm^{-3}$ at the time denoted by the red line
 				\end{itemize}
 			\end{itemize}
-			\vspace{1 em}
+			% \vspace{1 em}
 
 			Compare LWP response to aerosol forcing against observed LWP at time of cloud dissipation.
 			\begin{itemize}
 				\item Oliktok Point simulated LWP response was much slower than observed
 				\item ASCOS simulated LWP response was similar to observed
 			\end{itemize}
+
 		\end{column}
 	\end{alertblock}
 \end{column}
